# movies-etl

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  combine_first_quiz.ipynb  pyproject.toml
src/movies_etl/api/: after.py  call.py
tests/: test_after.py  test_call.py
