[project]
name = "movies-etl"
version = "0.1.3"
description = "Default template for PDM package"
authors = [
    {name = "vhzkclq0705", email = "vhzkclq0705@naver.com"},
]
dependencies = ["requests>=2.32.3", "pandas>=2.2.3", "pyarrow>=19.0.1", "python-dotenv>=1.0.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
note = [
    "jupyterlab>=4.3.5",
]
test = [
    "pytest>=8.3.5",
]
